[package]
authors = ["Jet Li <jing.i.qin@icloud.com>"]
categories = ["gui", "wasm", "web-programming"]
description = "Hooks for the Yew web framework, inspired by react hook libs like streamich/react-use and alibaba/hooks."
documentation = "https://docs.rs/yew-hooks/"
edition = "2018"
homepage = "https://github.com/jetli/yew-hooks"
keywords = ["wasm", "yew", "hooks", "react"]
license = "Apache-2.0/MIT"
name = "yew-hooks"
readme = "../../README.md"
repository = "https://github.com/jetli/yew-hooks"
version = "0.1.46"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
# yew = "0.19.3"
yew = {git = "https://github.com/yewstack/yew", features = ["hydration", "ssr", "tokio"]}

gloo = "0.4"
js-sys = "0.3"
serde = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
features = [
  "BeforeUnloadEvent",
  "Element",
  "UrlSearchParams",
  "WebSocket",
  "MessageEvent",
  "CloseEvent",
  "BinaryType",
  "DomRectReadOnly",
  "Navigator",
  "Geolocation",
  "Coordinates",
  "Position",
  "PositionError",
  "PositionOptions",
  "File",
  "DataTransfer",
  "DataTransferItem",
  "DataTransferItemList",
  "HtmlMediaElement",
  "TimeRanges",
  "Touch",
  "TouchList",
]
version = "0.3"

[dev-dependencies]
log = "0.4.8"
